--- a/general_style.css
+++ b/general_style.css
@@ -1,16 +1,47 @@
+*{
+    background-color: rgb(15, 15, 20);
+}
+
 body{
-    background-color: rgb(30, 30, 30);
+    margin-left: 5%;
 }
 
 nav{
-    align-items: center;
-}
-
-h1{
-    color:lightpink;
+    color: white;
+    text-align: center;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
+nav table{
+    margin-left: auto;
+    margin-right: auto;
+}
+
+h1{
+    color:aquamarine;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+h2{
+    color: white;
+}
+
+h3{
+    color: white;
+}
+
+h4{
+    color: white;
+}
+
 p{
+    color: white;
+}
+
+a{
+    color: lightpink;
+}
+
+table{
     color: white;
 }
