--- a/general_style.css
+++ b/general_style.css
@@ -1,31 +1,34 @@
-/*:root[data-theme="light"] {
-    --text: hsl(210, 39%, 7%);
-    --background: hsl(210, 39%, 93%);
-    --primary: hsl(207, 40%, 27%);
-    --secondary: hsl(250, 40%, 66%);
-    --accent: hsl(268, 40%, 50%);
-  }*/
-
 :root{
 --text: hsl(210, 39%, 93%);
 --background: hsl(210, 39%, 7%);
---primary: hsl(208, 40%, 73%);
---secondary: hsl(251, 40%, 34%);
---accent: hsl(268, 40%, 50%);
+--elevated_background: hsl(196, 36%, 16%);
+--primary: hsl(239, 77%, 72%);
+--secondary: hsl(280, 76%, 65%);
+--accent: hsl(329, 87%, 59%);
 }
 
 *{
-    background-color: hsl(210, 39%, 7%);
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 body{
-    margin-left: 5%;
+    background-color: var(--background);
 }
 
 nav{
+    background-color: var(--elevated_background);
     color: var(--text);
     text-align: center;
+}
+
+header{
+    display: flex;
+    justify-content: center;
+    background-color: var(--primary);
+}
+
+header h1{
+    color: var(--text);
 }
 
 nav table{
@@ -60,6 +63,10 @@ a{
 
 table{
     color: var(--text);
+}
+
+abbr:hover{
+    color: lightcoral;
 }
 
 #last_updated_time{
