--- a/general_style.css
+++ b/general_style.css
@@ -31,13 +31,17 @@ header h1{
     color: var(--text);
 }
 
-nav table{
-    margin-left: auto;
-    margin-right: auto;
+nav table tr{
+    display: flex;
+    justify-content: space-around;
+}
+
+nav table td:hover{
+    background-color: var(--accent);
 }
 
 h1{
-    color:var(--accent);
+    color:var(--primary);
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
