--- a/general_style.css
+++ b/general_style.css
@@ -31,12 +31,21 @@ header h1{
     color: var(--text);
 }
 
-nav table tr{
+.navBar ul{
     display: flex;
-    justify-content: space-around;
+    list-style: none;
+    justify-content: space-evenly;
+    padding-left: 0;
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
-nav table td:hover{
+.navBar ul li a{
+    text-decoration: none;
+}
+
+.navBar ul li a:hover{
+    color: var(--text);
     background-color: var(--accent);
 }
 
