--- a/general_style.css
+++ b/general_style.css
@@ -117,22 +117,30 @@ abbr:hover{
     }
 }
 
-#inhaltsverzeichnis li{
+#inhaltsverzeichnis{
+    list-style: none;
+}
+
+#inhaltsverzeichnis ul{
     display: flex;
     flex-wrap: row wrap;
     list-style: none;
 }
 
-#inhaltsverzeichnis li ul li{
-    padding: 1em;
+#inhaltsverzeichnis ul ul{
+    display: flex;
+    flex-wrap: row wrap;
+    list-style: none;
 }
+
 
 .equationsGrid {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 500px;
-    grid-template-rows: repeat(5, 10em);
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: repeat(4, 10em);
     align-items: stretch;
     justify-items: stretch;
+    margin-right: 50%;
 }
 
 .eq_Title, .eq_Equation, .eq_Image {
