--- a/general_style.css
+++ b/general_style.css
@@ -78,23 +78,11 @@ h1{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-h2{
+h2, h3, h4, h5{
     color: var(--secondary);
 }
 
-h3{
-    color: var(--secondary);
-}
-
-h4{
-    color: var(--secondary);
-}
-
-p{
-    color: var(--text);
-}
-
-div{
+p, div{
     color: var(--text);
 }
 
@@ -108,9 +96,12 @@ button{
     border-radius: 10px;
 }
 
-select{
+select, input{
     color: var(--text);
     background-color: var(--elevated_background);
+    border-radius: 1em;
+    width: 10em;
+    text-align: center;
 }
 
 abbr:hover{
@@ -174,7 +165,7 @@ abbr:hover{
     grid-column: 3/4;
 }
 
-.calculatorContainer{
+#calculator-container{
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
@@ -182,15 +173,23 @@ abbr:hover{
 
 #select-container{
     display: flex;
-    width: 50%%;
     margin-right: 0.5em;
 }
+
 
 #input-container{
     display: flex;
     width: 65%;
     margin-left: 0.5em;
     justify-content: space-evenly;
+}
+
+#result-container{
+    display: flex;
+    margin: 3em;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 
