--- a/general_style.css
+++ b/general_style.css
@@ -84,7 +84,11 @@ h1{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-h2, h3, h4, h5{
+h2{
+    color: var(--accent);
+}
+
+h3, h4, h5{
     color: var(--secondary);
 }
 
@@ -140,12 +144,20 @@ abbr:hover{
     list-style: none;
 }
 
-.equationsGrid {
+#_2dGrid {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: repeat(4, 8em);
     gap: 1em;
 }
+
+#_3dGrid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: repeat(5, 8em);
+    gap: 1em;
+}
+
 
 .eq_Title, .eq_Equation, .eq_Image {
     display: flex; 
