--- a/general_style.css
+++ b/general_style.css
@@ -103,7 +103,10 @@ a{
 button{
     height: 3em;
     width: 10em;
-    border-radius: 10px;
+}
+
+button:hover{
+    background-color: var(--accent);
 }
 
 select, input{
@@ -135,26 +138,16 @@ abbr:hover{
     }
 }
 
-#inhaltsverzeichnis{
-    list-style: none;
-}
-
-#inhaltsverzeichnis ul{
+#inhaltsverzeichnis div{
     display: flex;
     flex-wrap: row wrap;
-    list-style: none;
 }
 
-#inhaltsverzeichnis ul ul{
-    display: flex;
-    flex-wrap: row wrap;
-    list-style: none;
-}
 
 #_2dGrid {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: repeat(4, 8em);
+    grid-template-rows: repeat(5, 8em);
     gap: 1em;
 }
 
@@ -198,6 +191,7 @@ abbr:hover{
     display: grid;
     grid-template-columns:  1fr 1fr 1fr 1fr;
     grid-template-rows: 30em;
+    gap: 3em;
 }
 
 #select-container{
@@ -209,7 +203,8 @@ abbr:hover{
     grid-column: 2/3;
     display: flex;
     flex-flow: column;
-    justify-content: stretch;
+    margin-right: 5em;
+    align-items: end;
 }
 
 #operation-container{
