--- a/general_style.css
+++ b/general_style.css
@@ -143,7 +143,6 @@ abbr:hover{
     flex-wrap: row wrap;
 }
 
-
 #_2dGrid {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -158,6 +157,11 @@ abbr:hover{
     gap: 1em;
 }
 
+#intro{
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+}
 
 .eq_Title, .eq_Equation, .eq_Image {
     display: flex; 
