--- a/general_style.css
+++ b/general_style.css
@@ -138,9 +138,16 @@ abbr:hover{
     }
 }
 
-#inhaltsverzeichnis div{
+
+.inhaltsverzeichnis {
     display: flex;
-    flex-wrap: row wrap;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.inhaltsverzeichnis > div {
+    display: flex;
+    flex-wrap: wrap;
 }
 
 #_2dGrid {
